--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -89,7 +89,7 @@
                   <td>Waktiha</td>
                 </tr>
                 <tr>
-                  <td class="fw-semibold">Kategori</td>
+                  <td class="fw-semibold">Category</td>
                   <td>Website</td>
                 </tr>
                 <tr>
